development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seeds-test-development-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: seeds-test-development
            port:
              number: 80
